# yandex_backend-selection-python_summer_2022

./: .gitignore  .gitlab-ci.yml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  set_autostart.sh  setup.cfg
app/: __main__.py  creator.py  handlers.py  utils.py
app/routers/: delete.py  imports.py  node.py  nodes.py  sales.py
config/: __init__.py  config.py
database/: __init__.py  models.py  proxy.py  proxy_utils.py  schemas.py  shop_unit_type.py  utils.py  validators.py
online_tests/: __init__.py  __main__.py  conftest.py  unit_test.py  utils.py
online_tests/app/: test_delete.py  test_imports.py  test_node.py  test_nodes.py
online_tests/int_tests/: test_delete_and_node.py  test_imports_and_node.py  test_imports_and_nodes.py  test_imports_and_sales.py
tests/: conftest.py  static.py  utils.py
tests/app/: test_delete.py  test_imports.py  test_imports_and_node.py  test_imports_and_nodes.py  test_imports_and_sales.py  test_node.py  test_nodes.py  test_sales.py
tests/database/: test_proxy.py
tests/int_tests/: test_delete_and_node.py  test_delete_and_node_db.py  test_imports_and_node.py  test_imports_and_sales.py
tests_data/: static.py  utils.py
